    - Updated the Growth Credit icon to 64x64
    - Tiberium Control Node now has far less range(30x30, down from 100x100), in addition to much less power required.
    - Changed a bunch of internal names of items and entities.
    - Added an automated thing for adding ore icons to growth credit recipes
    - Switched the Ion Core back to the old Nuclear Reactor icon
  Features:
    - AOE Node Harvester, for all your multi node harvesting needs.
    - Tiberium Control Network added. Boosts all tiberium harvesting structures, for a fair bit of extra power required.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
  Changes:
    - /tibDeleteOre command now also deletes nodes that grew on invalid terrain.  Can be useful if you had Tiberium growing on water or in the void of space from before 1.0.8
  Bugfixes:
    - Fixed Tiberium damaging train tracks
    - Fixed MARV destroying Blossom Trees
    - Fixed Blossom trees not reappearing when Tiberium Spikes were deconstructred
    - Fixed nodes sometimes missing a growth cycle when other nodes were mined out
    - Fixed Tiberium Science missing from Angel's Industry's labs and reduced the odds of it happening for other tech overhauls in general
    - Fixed Tiberium growing on certain tile types that shouldn't have resources on them (water and the void of space)
    - Fixed Tiberium Seed Missiles not destroying other resources when they grow Tiberium ore
    - Fixed centrifuge recipes accounting for hidden, inaccessible recipes
    - Added a conversion to clean up issue from the last couple patches related to Blossom Trees
---------------------------------------------------------------------------------------------------
Version: 1.0.7
  Bugfixes:
    - Fixed crash introduced in 1.0.6 due to missing step-up conversion
---------------------------------------------------------------------------------------------------
Version: 1.0.6
  Wiki: